Let parents choose safety alert push severity
